--- a/task3/index.html
+++ b/task3/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
+            <h1>hey</h1>
             <h2>To-Do List <img src="images/icon.png"</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
